Signed-off-by: Kai Boernert <kai-boernert@visiongamestudios.de>

--- a/emuStick/README
+++ b/emuStick/README
@@ -2,10 +2,10 @@ schritt 1
 gradle installieren (packetmanager oder download von deren seite)
 
 für eclipse
-gradle eclipse
+./gradlew eclipse
 
 für benutzten
-gradle deploy
+./gradlew deploy
 -> erstellt ?/emuStick/build/libs/emuStick-1.0.0-SNAPSHOT-standalone.jar
 kann direkt ausgeführt werden
 java -jar emuStick-1.0.0-SNAPSHOT-standalone.jar
